Update of template

--- a/interlok-docker/src/main/interlok/config/bootstrap.properties
+++ b/interlok-docker/src/main/interlok/config/bootstrap.properties
@@ -1,5 +1,4 @@
 adapterConfigUrl.0=file://localhost/./config/adapter.xml
-managementComponents=jmx:jetty
 webServerConfigUrl=./config/jetty.xml
 jmxserviceurl=service:jmx:jmxmp://localhost:5555
 preProcessors=variableSubstitution
@@ -18,7 +17,8 @@ sysprop.org.jboss.logging.provider=slf4j
 # datadog properties
 datadogApiKey=<DD-API-KEY>
 datadogPushTimerSeconds=10
-managementComponents=jmx:jetty:metrics-interlok:metrics-jvm:metrics-provider-datadog:health-check
+#managementComponents=jmx:jetty:metrics-interlok:metrics-jvm:metrics-provider-datadog:health-check
+managementComponents=jmx:jetty
 
 ## Period to execute healthcheck in seconds
 healthCheckWorkflow=60
